--- a/src/components/GameInfo/GameInfo.module.scss
+++ b/src/components/GameInfo/GameInfo.module.scss
@@ -1,9 +1,6 @@
 .info {
-    margin: 4px;
-    position: absolute;
-    top: 0;
-    right: 20px;
     display: flex;
     flex-direction: column;
     gap: 4px;
+    padding: 4px;
 }
