--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -2,4 +2,9 @@
     width: 200px;
     height: 250px;
     border: 1px solid white;
+
+    img {
+        width: 80%;
+        height: 60%;
+    }
 }
