--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,11 @@
   src: url("../Geist-1.3.0/Geist-1.3.0/statics-woff/Geist-Bold.woff2");
 }
 
+:root {
+  --ds-gray-200-value: 0, 0%, 12%;
+  --ds-gray-200: hsla(var(--ds-gray-200-value), 1);
+}
+
 * {
   font-family: Geist;
   color: white;
